--- a/angular-mba/package.json
+++ b/angular-mba/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bootstrap": "^5.3.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
